Fixed the bad-jumping bug for articles

--- a/src/css/header.module.css
+++ b/src/css/header.module.css
@@ -142,6 +142,7 @@
 	height: 50px;
 	display: flex;
 	align-items: center;
+	box-shadow: 0 10px 5px rgba(0, 0, 0, 0.4);
 }
 
 .newsFeed div.intro {
