--- a/src/css/page.module.css
+++ b/src/css/page.module.css
@@ -1,6 +1,19 @@
 .main {
 	margin-left: 30px;
 	margin-right: 30px;
+	height: calc(100vh - 140px);
+	overflow: scroll;
+}
+
+
+/* Page area styling */
+
+.page {
+	position: fixed;
+	margin: auto;
+	width: 100vw;
+	background: white;
+	padding-top: 10px;
 }
 
 .main h1 {
@@ -47,10 +60,7 @@
 }
 
 .main hr {
-	height: 25px;
-	color: gray;
-	border-color: blue;
-	z-index: 1;
+	border: 1px solid #002147;
 }
 
 .main table {
@@ -68,25 +78,4 @@
 	background: #dddddd;
 	padding: 5px;
 	text-align: center;
-}
-
-/* Page area styling */
-
-.page {
-	margin: auto;
-	width: 100vw;
-	background: white;
-	padding-top: 10px;
-	min-height: 800px;
-	position: relative;
-	overflow: hidden;
-}
-
-.page:before, .page:after {
-	content: "";
-	display: table;
-}
-
-.page:after {
-	clear: both;
 }
